modify views and modify scraper3 category

--- a/hotdeal/templates/index.html
+++ b/hotdeal/templates/index.html
@@ -20,7 +20,7 @@
         <!-- Responsive navbar-->
 
         <!-- Header-->
-        <form action="http://127.0.0.1:8000/hotdeal/view/" method="GET">
+        <form action="{%url 'hotdeal:view'%}" method="GET">
             <header class="py-5">
                 <div class="container px-lg-5">
                     <div class="p-4 p-lg-5 bg-light rounded-3 text-center">
